# Kashy

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  README.vi.md  go.mod  go.sum
.github/workflows/: ci.yml  release-ui.yml  release.yml
cmd/kashy/: cmd_balance.go  cmd_config.go  cmd_doctor.go  cmd_mcp.go  cmd_start.go  cmd_status.go  cmd_update.go  main.go
internal/daemon/: daemon.go  daemon_test.go  signal_unix.go  signal_windows.go
internal/doctor/: doctor.go  doctor_test.go
internal/httpserver/: server.go  server_test.go
internal/kashyconfig/: config.go  config_test.go
internal/mcpserver/: server.go  server_test.go
internal/openrouter/: client.go  client_test.go
internal/provider/: provider.go  provider_test.go
internal/proxy/: proxy.go  proxy_test.go
internal/session/: session.go  session_test.go
internal/updater/: updater.go  updater_test.go
internal/verify/: verify.go  verify_test.go
internal/version/: version.go
kashy-ui/: .gitignore  README.md  index.html  package-lock.json  package.json
kashy-ui/src/: App.tsx  api.ts  styles.css
kashy-ui/src-tauri/: Cargo.toml  tauri.conf.json
kashy-ui/src-tauri/capabilities/: default.json
kashy-ui/src-tauri/icons/: icon.icns
kashy-ui/src-tauri/src/: lib.rs  main.rs
