[package]
name = "kashy-ui"
version = "0.1.0"
description = "Kashy GUI — AI spending monitor"
authors = ["nicodolas"]
edition = "2021"

[lib]
name = "kashy_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
